# otus-cpp-dk

./: .gitignore  CMakeLists.txt  Doxyfile  conanfile.txt  notes.org
.github/workflows/: release.yml
CMake/: DefaultCXX.cmake
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  version.h.in
src/lib/cpp/: cutsomAllocator.cpp  ipfilter.cpp  lib.cpp
src/lib/hpp/: customAllocator.h  customContainer.h  ipfilter.h  print_ip.h
test/: CMakeLists.txt  test_ip_printer.cpp  test_ipfilter.cpp  test_version_counter.cpp
